# kenoma

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  fake_term.py  kenoma.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: audit-fixes-plan.md
