[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kenoma"
version = "0.1.0"
description = "A fake shell powered by raw LLM completion. The model hallucinates command output until it emits the next prompt."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "a9lim", email = "a9lim@protonmail.com" },
]
keywords = [
    "llm",
    "terminal",
    "shell",
    "hallucination",
    "completion",
    "transformers",
    "huggingface",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "transformers>=4.44",
    "accelerate",
    "sentencepiece",
]

[project.optional-dependencies]
quantize = ["bitsandbytes"]
dev = [
    "ruff>=0.6.9",
    "pyright>=1.1.400",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
kenoma = "kenoma:main"

[project.urls]
Homepage = "https://github.com/a9lim/kenoma"
Repository = "https://github.com/a9lim/kenoma"
Issues = "https://github.com/a9lim/kenoma/issues"
Releases = "https://github.com/a9lim/kenoma/releases"

[tool.setuptools]
py-modules = ["kenoma"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
# E501 (line too long): kenoma.py has long help strings and module docstrings
# we don't want to break.  E741 (ambiguous variable name) and E731 (lambda
# assignment): conventional in tight scripting.  E402 (module level import
# not at top): we deliberately gate `tomllib` import behind a try/except,
# and bitsandbytes is imported lazily inside `build_quant_config`.
ignore = ["E501", "E741", "E402", "E731"]

# Pyright — scoped to the single module that is the public API surface.
# ``standard`` mode (rather than ``strict``) is deliberate: torch /
# transformers stubs are partial and ``strict`` fires constantly on
# legitimate ``Tensor`` calls.  We escalate the rules that actually catch
# bugs (missing parameter / type-arg, attribute access, argument / call /
# return / assignment) to error.
[tool.pyright]
include = ["kenoma.py"]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportAttributeAccessIssue = "error"
reportArgumentType = "error"
reportCallIssue = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportUnnecessaryIsInstance = "warning"
# transformers re-exports many symbols whose stubs don't list them in
# __all__; newer pyright treats that as a private-import error.
reportPrivateImportUsage = "warning"
