[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kenoma"
dynamic = ["version"]
description = "A shell powered by LLM completion"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "a9lim", email = "mx@a9l.im" },
]
keywords = [
    "llm",
    "terminal",
    "shell",
    "hallucination",
    "completion",
    "transformers",
    "huggingface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Emulators",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "transformers>=4.44",
    "accelerate",
    "sentencepiece",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.optional-dependencies]
# bitsandbytes has no official macOS or Windows wheels, so the marker keeps
# `pip install kenoma[quantize]` from blowing up off-Linux.
quantize = ["bitsandbytes; platform_system == 'Linux'"]
dev = [
    "ruff>=0.6.9",
    "pyright>=1.1.400",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
kenoma = "kenoma:main"

# URL labels here are the ones PyPI's sidebar specifically renders with
# icons (Source, Issues, Changelog, Documentation, Funding); other labels
# render as plain text links.
[project.urls]
Homepage      = "https://github.com/a9lim/kenoma"
Source        = "https://github.com/a9lim/kenoma"
Issues        = "https://github.com/a9lim/kenoma/issues"
Changelog     = "https://github.com/a9lim/kenoma/releases"
Documentation = "https://github.com/a9lim/kenoma#readme"

[tool.setuptools]
py-modules = ["kenoma"]

[tool.setuptools.dynamic]
# Single source of truth: ``__version__`` in kenoma.py. Setuptools AST-reads
# the assignment so the heavy torch/transformers imports never run at build.
version = { attr = "kenoma.__version__" }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
# E501 (line too long): kenoma.py has long help strings and module docstrings
# we don't want to break.  E741 (ambiguous variable name) and E731 (lambda
# assignment): conventional in tight scripting.  E402 (module level import
# not at top): we deliberately gate `tomllib` import behind a try/except,
# and bitsandbytes is imported lazily inside `build_quant_config`.
ignore = ["E501", "E741", "E402", "E731"]

# Pyright — scoped to the single module that is the public API surface.
# ``standard`` mode (rather than ``strict``) is deliberate: torch /
# transformers stubs are partial and ``strict`` fires constantly on
# legitimate ``Tensor`` calls.  We escalate the rules that actually catch
# bugs (missing parameter / type-arg, attribute access, argument / call /
# return / assignment) to error.
[tool.pyright]
include = ["kenoma.py"]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportAttributeAccessIssue = "error"
reportArgumentType = "error"
reportCallIssue = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportUnnecessaryIsInstance = "warning"
# torch and transformers re-export many symbols (torch.dtype,
# torch.float16, torch.tensor, etc.) but their stubs don't list them in
# __all__.  Newer pyright flags these as private-import use even though
# they're the long-standing public API.  Disabled here because every
# instance is a false positive on third-party stubs.
reportPrivateImportUsage = "none"
